fixing gap

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -361,11 +361,13 @@ footer
 @media (orientation: portrait)
     header
         height: 322px
+        .wrap
+            height: 100%
         .title
             margin: 0px 6vw
             width: auto
-            font-size: clamp(24px, 2.4vw, 48px)
-            line-height: 33px
+            font-size: clamp(24px, 4vw, 64px)
+            line-height: clamp(33px, 3vw, 89px)
             font-weight: normal
             text-align: center
             background: -webkit-linear-gradient(90.03deg, #FFFFFF 0.01%, #ADC1E0 99.96%)
@@ -377,7 +379,7 @@ footer
         .subtitle
             font-size: 12px
             line-height: 14px
-            margin-bottom: 60px
+            margin-bottom: 48px
         > img
             height: 30%
             right: 0px
@@ -395,11 +397,17 @@ footer
                     font-size: 28px
                     line-height: 36px
                 .block
-                    font-size: 16px
-                    line-height: 16px
+                    display: flex
+                    flex-direction: column
+                    gap: 20px
+                    .question
+                        font-size: 20px
+                        line-height: 28px
+                        margin: 0px
                     .answer
                         font-size: 20px
                         line-height: 28px
+                        margin: 0px
                 h2
                     font-size: 20px
                     line-height: 28px
